--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                               <img src="images/digitalArt/cup_2.png" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                             <div class="item">
-                              <img src="images/drawings/owl2.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
+                              <img src="images/drawings/owl.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
                             </div>
                             <div class="item">
                               <img src="images/photography/DSC06232.JPG" alt="hitler not here" style="height:100%; width:100%; padding:0;">
