--- a/myWorks.html
+++ b/myWorks.html
@@ -297,6 +297,29 @@
 				</div>
 				<div class="col-md-2 col-xs-4"></div>
 		</div>
+
+		<div class="row">
+				<div class="col-md-2 col-xs-4"></div>
+				<div class="col-md-20 col-xs-16">
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/crafts/feather_peacock.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<!-- <a href="#" class="image2 images_drawing">
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/crafts/3d_swan2.jpg" alt="image is here" />
+								</a> -->
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<!-- <a href="#" class="image2 images_drawing">
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/crafts/vase3.jpg" alt="image is here" />
+								</a> -->
+						</div>
+				</div>
+				<div class="col-md-2 col-xs-4"></div>
+		</div>
+
 	</div>
 	</li>
 
@@ -308,12 +331,12 @@
 	      <div class="col-md-20 col-xs-16">
 	          <div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.JPG" alt="image is here" />
+	                <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/owl.JPG" alt="image is here" />
 	              </a>
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
 	              <a href="#" class="image1 images_drawing">
-	                <img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/richa.jpg" alt="image is here" />
+	                <img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/monkey.jpg" alt="image is here" />
 	              </a>
 	          </div>
 	          <div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
@@ -330,12 +353,12 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/owl.JPG" alt="image is here" />
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/man_woman.JPG" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
 								<a href="#" class="image1 images_drawing">
-									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/monkey.jpg" alt="image is here" />
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/richa.jpg" alt="image is here" />
 								</a>
 						</div>
 						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
@@ -418,6 +441,28 @@
 				<div class="col-md-20 col-xs-16">
 						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
 								<a href="#" class="image1 images_drawing">
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/heart.JPG" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/rose.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/shadow_run.JPG" alt="image is here" />
+								</a>
+						</div>
+				</div>
+				<div class="col-md-2 col-xs-4"></div>
+		</div>
+
+		<div class="row">
+				<div class="col-md-2 col-xs-4"></div>
+				<div class="col-md-20 col-xs-16">
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
 							<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/flowers_bouque.jpg" alt="image is here" />
 								</a>
 						</div>
@@ -434,6 +479,73 @@
 				</div>
 				<div class="col-md-2 col-xs-4"></div>
 		</div>
+
+		<div class="row">
+				<div class="col-md-2 col-xs-4"></div>
+				<div class="col-md-20 col-xs-16">
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
+							<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/dracula.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/table.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image1 images_drawing">
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/fish_tank.jpg" alt="image is here" />
+								</a>
+						</div>
+				</div>
+				<div class="col-md-2 col-xs-4"></div>
+		</div>
+
+		<div class="row">
+				<div class="col-md-2 col-xs-4"></div>
+				<div class="col-md-20 col-xs-16">
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/cup.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/earth.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/peace.jpg" alt="image is here" />
+								</a>
+						</div>
+				</div>
+				<div class="col-md-2 col-xs-4"></div>
+		</div>
+
+		<div class="row">
+				<div class="col-md-2 col-xs-4"></div>
+				<div class="col-md-20 col-xs-16">
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/drawings/hunting.jpg" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="2" data-toggle="modal" data-target="#myImageModal" src="images/drawings/swan-pen.JPG" alt="image is here" />
+								</a>
+						</div>
+						<div class="look col-md-8 col-xs-24 xs-pt-3 xs-p-0">
+								<a href="#" class="image2 images_drawing">
+									<img width="100%;" id="3" data-toggle="modal" data-target="#myImageModal" src="images/drawings/doorandtree.jpg" alt="image is here" />
+								</a>
+						</div>
+				</div>
+				<div class="col-md-2 col-xs-4"></div>
+		</div>
+
 	</div>
 	</li>
 
@@ -454,9 +566,10 @@
           </div>
       </div>
   </div>
-
+<a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;">Top<span></span></a>
 </div>
 </div>
+  <script src="functions.js"></script>
 <script>
 // Image open on bootstrap modal
 $(document).ready(function () {
