--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
                           </div>
                           <div class="my_credentials">
                             <label for="my_email">My Email Address:</label>
-                            <span>minu03.minu@gmail.com</span>
+                            <span>Some.thing@gmail.com</span>
                           </div>
                           <div class="my_credentials">
                             <label for="lindIn">My LinkedIn Profile:</label>
-                            <span>fkdfj  kldfj lfl</span>
+                            <span>www.linkedin.com/in/minu-kumari-0703</span>
                           </div>
                           <div class="my_credentials">
                             <label for="phn_num">My Phone Number:</label>
-                            <span>7344567891</span>
+                            <span>07-2-3-5-6</span>
                           </div>
                       </div>
                       <div class="col-md-2"></div>
