--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                           </div>
                           <div class="my_credentials">
                             <label for="lindIn">My LinkedIn Profile:</label>
-                            <span>www.linkedin.com/in/minu-kumari-0703</span>
+                            <span><a href="www.linkedin.com/in/minu-kumari-0703" style="color:#800000">minu-kumari-0703</a></span>
                           </div>
                           <div class="my_credentials">
                             <label for="phn_num">My Phone Number:</label>
