mobile view changed

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                           </div>
                       </div>
                       <div class="col-md-1"></div>
-                      <div class="col-md-7 my_contacts_info md-ml-60">
+                      <div class="col-md-7 my_contacts_info md-ml-60 md-pb-20">
                           <div class="my_credentials">
                             <label for="my_name">My Name:</label>
                             <span>Minu</span>
@@ -213,11 +213,13 @@
                           </div>
                           <div class="my_credentials">
                             <label for="lindIn">My LinkedIn Profile:</label>
-                            <span><a href="https://www.linkedin.com/in/minu-kumari-0703" style="color:#800000" target="_blank">minu-kumari-0703</a></span>
+                            <span id="lindIn">
+                              <a href="https://www.linkedin.com/in/minu-kumari-0703" target="_blank">minu-kumari-0703</a>
+                            </span>
                           </div>
                           <div class="my_credentials">
-                            <label for="phn_num">My Phone Number:</label>
-                            <span>07-2-3-5-6</span>
+                            <!-- <label for="phn_num">My Phone Number:</label>
+                            <span>07-2-3-5-6</span> -->
                           </div>
                       </div>
                       <div class="col-md-2"></div>
