--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <hr class="separator"/>
 </div>
-<div class="container page">
+<div class="page">
 
   <!-- start of navigation bar -->
   <div class="mainPage">
@@ -50,7 +50,7 @@
                               <li>I am a graduate with B.Tech degree in Electrical Engineering from HBTI.</li>
                               <li>I am also a part-time Volunteer with "Youth for Seva".</li>
                             </ul>
-                            I like to spend my spare time by <i>drawing, sketching, design 3D objects on Inventor, and origami and sometimes volunteer with 'YFS'</i>.
+                            I also enjoy <i>drawing, sketching, design 3D objects on Inventor, and origami</i>.
                           </div>
                           <br/>
                           <div class="see_more text_bottom">
