--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="col-md-24 xs-p-0" id="home">
             <div class="home_page">
               <div class="item">
-                <img src="images/photography/DSC06232.JPG" alt="hitler not here" style="width:100%;"><span class="welcome_text xs-pl-50">Welcome<br/>To<br/>My Site . . .</span>
+                <img src="images/Collage.jpg" alt="hitler not here" style="width:100%;"><span class="welcome_text xs-pl-50">Welcome...</span>
               </div>
             </div>
     </div>
@@ -33,7 +33,7 @@
                 <li><a class="links active" href="#home"><span>Home</span></a></li>
                 <li><a class="links" href="#about"><span>About</span></a></li>
                 <li><a class="links" href="#projects"><span>projects</span></a></li>
-                <li><a class="links" href="#work">Work</a></li>
+                <li><a class="links" href="#work">Works</a></li>
                 <li><a class="links" href="#contact">Contact</a></li>
             </ul>
         </div>
