--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <h3><b>Virtual Reality App</b>-At Deloitte</h3>
                           <p>Main objectives of this project was...</p>
                           <ul>
-                            <li>Provide a Visual experience to the Client the look and feel of 'Museum Stucture.'</li>
+                            <li>Provide a Visual experience to the Client the look and feel of a 'Museum Structure.'</li>
                             <li>Customer would be able to click on items and check the cost.</li>
                           </ul>
                           </div>
