removed proteus image

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <h3><b>Virtual Reality App</b>-At Deloitte</h3>
                           <p>Main objectives of this project was...</p>
                           <ul>
-                            <li>Provide a Visual experience to the Client the look and feel of a 'Museum Structure.'</li>
+                            <li>Provide a Visual experience to the Client the look and feel of a 'Museum' Prototype.</li>
                             <li>Customer would be able to click on items and check the cost.</li>
                           </ul>
                           </div>
@@ -116,10 +116,10 @@
                               <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/solarTrackerSystem.png" alt="image is here" />
                               <figcaption class="text-center"><i>Final prototype</i></figcaption>
                           </div>
-                          <div class="xs-mt-50 project_img">
+                          <!-- <div class="xs-mt-50 project_img">
                             <img width="100%;" id="1" data-toggle="modal" data-target="#myImageModal" src="images/proteus-simulation.png" alt="image is here" />
                               <figcaption class="text-center"><i>Proteus Simulation</i></figcaption>
-                          </div>
+                          </div> -->
                       </div>
                       <div class="col-md-2"></div>
                   </div>
