--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div id="overlay">
+              <!-- <div class="spinner"></div> -->
+              <img src="ripple.gif" style="" class="spinner2">
+  </div>
 <div class="back_ground">
 <!-- <div class="" style="background-color:#C3ECF0;"> -->
 <div class="row xs-m-0 xs-p-0">
@@ -246,6 +250,7 @@
 <a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;">Top<span></span></a>
 </div>
     <script src="functions.js"></script>
+    <script src="script.js"></script>
     <script>
     // Image open on bootstrap modal
     $(document).ready(function () {
