added welcome note

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div class="col-md-24 xs-p-0" id="home">
             <div class="home_page">
               <div class="item">
-                <img src="images/Collage.jpg" alt="hitler not here" style="width:100%;"><span class="welcome_text xs-pl-50">Welcome...</span>
+                  <img src="images/Collage.jpg" alt="hitler not here" style="width:100%;opacity:0.80">
+                <div class="welcome">
+                  <span class="border">Welcome...</span>
+                </div>
               </div>
             </div>
     </div>
