--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                           <div class="about_me">
                             <h2>About Me</h2>
                             <ul>
-                              <li>Presently I am working as a Front-End Developer at Deloitte USI.</li>
-                              <li>I am a graduate with B.Tech degree in Electrical Engineering from HBTI.</li>
-                              <li>I am also a part-time Volunteer with "Youth for Seva".</li>
+                              <li>Front-End Developer at Deloitte USI.</li>
+                              <li>Graduated with B.Tech degree in Electrical Engineering from HBTI.</li>
+                              <li>Part-time Volunteer with "Youth for Seva".</li>
                             </ul>
                             I also enjoy <i>drawing, sketching, design 3D objects on Inventor, and origami</i>.
                           </div>
@@ -102,17 +102,6 @@
                             <li>To design a prototype of solar tracking system.</li>
                             <li>To design a project that can detect and compare the intensity of light and</li>
                             <li>To design a project that is able to move a stepper motor based on the intensity of light and show the voltages across two LDRs on LCD.</li>
-                          </ul>
-                          </div>
-                          <div><p>COMPONENTS</p>
-                            <p>The major components those were used...</p>
-                          <ul>
-                            <li>Microcontroller(ATMEGA 16)</li>
-                            <li>Stepper motor</li>
-                            <li>Motor Drive(L293D)</li>
-                            <li>Voltage regulator(LM 7805)</li>
-                            <li>Liquid crystal display</li>
-                            <li>Sensors(Light Dependent Resistors)</li>
                           </ul>
                           </div>
                         </div>
